# celery-playground

./: .gitignore  CELERY_SETUP.md  COURSE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MODULE_README.md  QUICKSTART.md  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
benchmarks/: concurrency_test.py
celery_playground/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
demo/: apps.py  models.py  tasks.py  tasks_module_02.py  tasks_module_03.py  tasks_module_04.py  tasks_module_05.py  tasks_module_06.py  tasks_module_07.py  tasks_module_08.py  tasks_module_11.py
demo/migrations/: 0001_initial.py
docs/: production_checklist.md  worker_commands_reference.md
docs/module_summaries/: module-00-baseline.md  module-02-worker-internals.md  module-03-reliability.md  module-04-backpressure.md  module-05-queue-isolation.md  module-06-memory-management.md  module-07-beat-scheduling.md  module-08-monitoring.md  module-09-redis-ha.md  module-10-kubernetes.md  module-11-advanced.md
k8s/hpa/: hpa-default.yaml
production_patterns/: __init__.py  apps.py  models.py
scripts/: kill_worker.py  replay_dead_letter.py  submit_tasks.py  trace_redis.sh  validate_golden_rules.py
tests/: _placeholder.py  conftest.py  test_module_00_baseline.py  test_module_01_architecture.py  test_module_02_worker_internals.py  test_module_03_reliability.py  test_module_04_backpressure.py  test_module_05_queue_isolation.py  test_module_06_memory.py  test_module_07_beat.py  test_module_08_monitoring.py  test_module_09_redis_ha.py  test_module_10_kubernetes.py  test_module_11_advanced.py
(+11 files in other folders)
